--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@
   --font-light: 300;
   --font-medium: 400;
   --font-bold: 600;
+  --body-size: 16px;
 }
 
 * {
@@ -23,31 +24,124 @@
 .container {
   display: grid;
   grid-template-columns: 58% 42%;
+  height: 100vh;
+  width: 100vw;
 }
 
+/* ====== text side ====== */
 .container__text {
   background-image: url('./images/bg-pattern-desktop.svg');
   background-repeat: no-repeat;
   background-size: cover;
-  outline: red solid 1px;
   height: 100vh;
 }
 
+.container__text--logo {
+  margin: 40px 0px 0px 180px;
+}
+
+.container__text--title {
+  text-transform: uppercase;
+  letter-spacing: 15px;
+  margin: 120px 0 20px 180px;
+  font-size: 24pt;
+}
+
+#text__title-first {
+  color: var(--desaturated-red);
+  font-weight: var(--font-light);
+}
+
+#text__title-second {
+  color: var(--dark-grayish-red);
+}
+
+.container__text--subtitle {
+  font-size: var(--body-size);
+  color: var(--desaturated-red);
+  font-weight: var(--font-light);
+  margin: 0 250px 20px 180px;
+  line-height: 25px;
+}
+
+.container__text--input {
+  display: flex;
+  margin: 0 10px 20px 180px;
+}
+
+#email-input {
+  border-radius: 30px;
+  padding: 20px;
+  border: 1px solid #ddccd0;
+  outline: none;
+  width: 360px;
+}
+
+#email-btn {
+  box-sizing: border-box;
+  position: absolute;
+  top: 507px;
+  right: 855px;
+  border: none;
+  border-radius: 30px;
+  padding: 15px 40px;
+  outline: none;
+  cursor: pointer;
+  background-image: linear-gradient(
+    to right,
+    hsl(0, 80%, 86%),
+    hsl(0, 74%, 74%)
+  );
+  box-shadow: 0 15px 20px 0 rgba(198, 110, 110, 0.25);
+}
+
+#email-btn:hover {
+  -webkit-box-shadow: -1px 4px 10px -2px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: -1px 4px 10px -2px rgba(0, 0, 0, 0.75);
+  box-shadow: -1px 4px 10px -2px rgba(0, 0, 0, 0.75);
+  transform: scale(1.1);
+}
+
+#span__error {
+  display: none;
+  font-size: 10pt;
+  margin-left: 15px;
+  color: var(--soft-red);
+}
+
+.text__input--img  {
+  height: 100%;
+}
+
+#input-icon {
+  display: none;
+  position: absolute;
+  top: 520px;
+  left: 460px;
+}
+
+::placeholder {
+  color: var(--desaturated-red);
+  font-weight: var(--font-light);
+  font-size: 12pt;
+}
+
+/* ====== photo side ====== */
 .container__img {
-  outline: red solid 1px;
   height: 100vh;
 }
 
 .container__img > img {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
 
 footer {
   position: fixed;
   bottom: 0;
   left: 0;
+  right: 0;
   width: 100%;
   text-align: center;
 }
