--- a/styles.css
+++ b/styles.css
@@ -137,6 +137,11 @@
   object-fit: cover;
 }
 
+/* mobile design */
+@media (max-width: 375px){
+  
+}
+
 footer {
   position: fixed;
   bottom: 0;
@@ -144,4 +149,5 @@ footer {
   right: 0;
   width: 100%;
   text-align: center;
+  font-size: 10pt;
 }
