Restructurin of HTML and CSS layouts

--- a/styles.css
+++ b/styles.css
@@ -21,29 +21,39 @@
   font-family: var(--font);
 }
 
+body {
+  background-image: url('./images/bg-pattern-desktop.svg');
+  background-repeat: no-repeat;
+  height: 100vh;
+}
+
 .container {
   display: grid;
+  grid-template-areas:
+    'logo img'
+    'text img'
+    'form img';
   grid-template-columns: 58% 42%;
+  grid-template-rows: 10% 50% 40%;
   height: 100vh;
   width: 100vw;
 }
 
-/* ====== text side ====== */
-.container__text {
-  background-image: url('./images/bg-pattern-desktop.svg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 100vh;
+/* ====== logo ====== */
+.container__logo {
+  grid-area: logo;
+  margin: 65px 0px 0px 180px;
 }
 
-.container__text--logo {
-  margin: 40px 0px 0px 180px;
+/* ====== text ====== */
+.container__text {
+  grid-area: text;
+  margin: 160px 0px 20px 180px;
 }
 
 .container__text--title {
   text-transform: uppercase;
   letter-spacing: 15px;
-  margin: 120px 0 20px 180px;
   font-size: 24pt;
 }
 
@@ -60,16 +70,21 @@
   font-size: var(--body-size);
   color: var(--desaturated-red);
   font-weight: var(--font-light);
-  margin: 0 250px 20px 180px;
+  margin: 25px 250px 0px 0px;
   line-height: 25px;
 }
 
-.container__text--input {
-  display: flex;
-  margin: 0 10px 20px 180px;
+/* ====== form ====== */
+.container__form {
+  margin: 105px 10px 20px 180px;
+  grid-area: form;
 }
 
-#email-input {
+.container__form-input {
+  display: flex;
+}
+
+#input-email {
   border-radius: 30px;
   padding: 20px;
   border: 1px solid #ddccd0;
@@ -77,47 +92,47 @@
   width: 360px;
 }
 
-#email-btn {
+#input-btn {
   box-sizing: border-box;
   position: absolute;
-  top: 507px;
   right: 855px;
   border: none;
   border-radius: 30px;
-  padding: 15px 40px;
+  padding: 17px 40px;
   outline: none;
   cursor: pointer;
+  box-shadow: 0 15px 20px 0 rgba(198, 110, 110, 0.25);
   background-image: linear-gradient(
     to right,
     hsl(0, 80%, 86%),
     hsl(0, 74%, 74%)
   );
-  box-shadow: 0 15px 20px 0 rgba(198, 110, 110, 0.25);
 }
 
-#email-btn:hover {
+#input-btn:hover {
   -webkit-box-shadow: -1px 4px 10px -2px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: -1px 4px 10px -2px rgba(0, 0, 0, 0.75);
   box-shadow: -1px 4px 10px -2px rgba(0, 0, 0, 0.75);
   transform: scale(1.1);
 }
 
-#span__error {
+#input-error {
   display: none;
   font-size: 10pt;
   margin-left: 15px;
   color: var(--soft-red);
 }
 
-.text__input--img  {
+.input-btn-img  {
   height: 100%;
 }
 
 #input-icon {
   display: none;
+  align-self: center;
   position: absolute;
-  top: 520px;
-  left: 460px;
+  left: 455px;
+  
 }
 
 ::placeholder {
@@ -126,20 +141,64 @@
   font-size: 12pt;
 }
 
-/* ====== photo side ====== */
+/* ====== img ====== */
 .container__img {
+  background-image: url('./images/hero-desktop.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
   height: 100vh;
-}
-
-.container__img > img {
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
+  grid-area: img;
 }
 
 /* mobile design */
-@media (max-width: 375px){
-  
+@media (max-width: 375px) {
+  .container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 10% 250px 20% 20% 20%;
+    height: 100vh;
+    width: 100vw;
+  }
+
+  .container__text--logo {
+    grid-column-start: 1;
+    grid-row-start: 1;
+    margin: 30px 0px 0px 30px;
+    height: 25px;
+  }
+
+  .container__img {
+    background-image: url('./images/hero-mobile.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100vw;
+    height: 250px;
+    grid-column-start: 1;
+    grid-row-start: 2;
+  }
+
+  .container__text--title {
+    text-transform: uppercase;
+    letter-spacing: 15px;
+    font-size: 10pt;
+    grid-column-start: 1;
+    grid-row-start: 3;
+  }
+
+  .container__text--subtitle {
+    font-size: var(--body-size);
+    color: var(--desaturated-red);
+    font-weight: var(--font-light);
+    line-height: 10px;
+    grid-column-start: 1;
+    grid-row-start: 4;
+  }
+
+  .container__text--input {
+    display: flex;
+    grid-column-start: 1;
+    grid-row-start: 5;
+  }
 }
 
 footer {
